2022-05-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grotty/tty.cpp (tty_printer::add_char): Modify
	diagnostic message: what gets written "above [the] first line"
	might not be a character (glyph) per se, but a line (rule) from
	a drawing command, and in fact the occurrence of these from
	boxed tables is the most common cause of this message I've seen.

2022-05-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	[grotty]: Do more input validation.

	* src/devices/grotty/tty.cpp (tty_printer::draw): Throw warning
	if an unsupported geometric primitive is encountered.
	(tty_printer::line): Throw warning if a line is diagonal.  Die
	if length of a horizontal or vertical line is not a multiple of
	the appropriate motion quantum of the device (troff should never
	emit such nonsense, and currently doesn't appear to).

2022-05-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/tbl/tbl.1.man (Miscellaneous): Document GNU tbl's
	use of `#T` and `T.` registers.

2022-05-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_color_draw_node): Tweak
	diagnostic message to better distinguish drawing commands and
	device control commands.

2022-05-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	[grohtml]: Mitigate double-free problem exposed by malformed
	input.

	* src/roff/troff/mtsm.h (struct statem): Place member variable
	`issue_no` behind `DEBUGGING` preprocessor symbol, omitting it
	from production and ordinary development builds.
	* src/roff/troff/mtsm.cpp (no_of_statems): Place global variable
	behind `DEBUGGING` preprocessor symbol, omitting it from
	production and ordinary development builds.
	(statem::statem): Make constructor trivial if `DEBUGGING` not
	defined in preprocessor; it manipulates only `issue_no` and
	`no_of_statems`, which are synchronized.
	(statem::statem {copy}): Gate assignment of `issue_no` member