@@ -25,15 +25,23 @@ PREFIXMAN1 += src/preproc/tbl/tbl.1
 EXTRA_DIST += src/preproc/tbl/tbl.1.man
 
 tbl_TESTS = \
+  src/preproc/tbl/tests/check-horizontal-line-length.sh \
+  src/preproc/tbl/tests/check-line-intersections.sh \
+  src/preproc/tbl/tests/check-vertical-line-length.sh \
   src/preproc/tbl/tests/cooperate-with-nm-request.sh \
   src/preproc/tbl/tests/count-continued-input-lines.sh \
   src/preproc/tbl/tests/do-not-segv-on-invalid-vertical-span-entry.sh \
   src/preproc/tbl/tests/do-not-segv-when-backslash-R-in-text-block.sh \
   src/preproc/tbl/tests/format-time-diagnostics-work.sh \
   src/preproc/tbl/tests/save-and-restore-hyphenation-parameters.sh \
-  src/preproc/tbl/tests/save-and-restore-tab-stops.sh
+  src/preproc/tbl/tests/save-and-restore-tab-stops.sh \
+  src/preproc/tbl/tests/table-lacks-spurious-top-border.sh
 TESTS += $(tbl_TESTS)
 EXTRA_DIST += $(tbl_TESTS)
+
+tbl_XFAIL_TESTS = \
+  src/preproc/tbl/tests/table-lacks-spurious-top-border.sh
+XFAIL_TESTS += $(tbl_XFAIL_TESTS)
 
 
 # Local Variables:
